Sidebar width var & search icon fix
Creating a scss variable to hold sidebar left width, and fixing search
icon hidden behind scrollbar on Windows/Chrome.

Fixes #58

--- a/src/components/App/sass/generic.scss
+++ b/src/components/App/sass/generic.scss
@@ -22,7 +22,7 @@ html, body {
 }
 
 .hidden.menu-item-container {
-    left: -300px;
+    left: -$sidebar-left-width;
     height: 0;
     visibility: hidden;
 }
