--- a/src/components/App/sass/settings.scss
+++ b/src/components/App/sass/settings.scss
@@ -1,3 +1,4 @@
+$sidebar-left-width: 300px;
 $sidebar-left-highlight-color: #f3ac1c;
 
 $menu-bg-color: #182d4c;
